--- a/examples/saul/Makefile
+++ b/examples/saul/Makefile
@@ -14,7 +14,7 @@ USEMODULE += shell
 USEMODULE += shell_commands
 # additional modules for debugging:
 USEMODULE += ps
-
+USEMODULE += bme680_i2c
 # Comment this out to disable code in RIOT that does safety checking
 # which is not needed in a production environment but helps in the
 # development process:
